; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Console.c_ParseCommandA.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Console.c_ParseCommandA.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ParseCommandA(i32* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %35

12:                                               ; preds = %2
  %13 = load i8*, i8** %5, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %15, label %18

15:                                               ; preds = %12
  %16 = load i8*, i8** %5, align 8
  %17 = call i32* @CopyStrToUni(i8* %16)
  store i32* %17, i32** %6, align 8
  br label %19

18:                                               ; preds = %12
  store i32* null, i32** %6, align 8
  br label %19

19:                                               ; preds = %18, %15
  %20 = load i32*, i32** %4, align 8
  %21 = load i32*, i32** %6, align 8
  %22 = call i32* @ParseCommand(i32* %20, i32* %21)
  store i32* %22, i32** %7, align 8
  %23 = load i32*, i32** %7, align 8
  %24 = icmp eq i32* %23, null
  br i1 %24, label %25, label %26

25:                                               ; preds = %19
  store i8* null, i8** %8, align 8
  br label %31

26:                                               ; preds = %19
  %27 = load i32*, i32** %7, align 8
  %28 = call i8* @CopyUniToStr(i32* %27)
  store i8* %28, i8** %8, align 8
  %29 = load i32*, i32** %7, align 8
  %30 = call i32 @Free(i32* %29)
  br label %31

31:                                               ; preds = %26, %25
  %32 = load i32*, i32** %6, align 8
  %33 = call i32 @Free(i32* %32)
  %34 = load i8*, i8** %8, align 8
  store i8* %34, i8** %3, align 8
  br label %35

35:                                               ; preds = %31, %11
  %36 = load i8*, i8** %3, align 8
  ret i8* %36
}

declare dso_local i32* @CopyStrToUni(i8*) #1

declare dso_local i32* @ParseCommand(i32*, i32*) #1

declare dso_local i8* @CopyUniToStr(i32*) #1

declare dso_local i32 @Free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
